# Crew-Automation-for-Equity-Trading

./: LICENSE  README.md  pyproject.toml
src/comprehensive_crew_automation_for_equity_trading_platform/: crew.py  main.py
src/comprehensive_crew_automation_for_equity_trading_platform/config/: agents.yaml  tasks.yaml
